--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 		"Framework",
 		"Authentication"
 	],
-	"version" : "0.*",
+	"version" : "v0.7.1",
 	"homepage" : "https://chglongstone.github.io/just-core-auth-login",
 	"require" : {
 		"php" : ">=5.3.7"
